--- a/css/service.css
+++ b/css/service.css
@@ -37,7 +37,7 @@ header {
 
 /* --firstview--- */
 #firstview {
-  background: url(/img/mv.png) no-repeat;
+  background: url(../img/mv.png) no-repeat;
   background-position: center;
   background-size: cover;
   height: 300px;
