--- a/css/company.css
+++ b/css/company.css
@@ -3,6 +3,9 @@ a {
   color: inherit;
   transition: 0.3s;
 }
+a:hover {
+  opacity: 0.5;
+}
 
 body {
   line-height: 1.6;
@@ -35,6 +38,9 @@ header {
   margin-right: 30px;
 }
 
+.hamburger {
+  display: none;
+}
 /* ----firstview---- */
 #firstview {
   background: url(../img/mv.png) no-repeat;
@@ -132,4 +138,12 @@ footer {
 .footer-nav-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+.footer-nav-item {
+  padding: 0 10px;
+}
+
+.footer-nav-item+ .footer-nav-item {
+  border-left: 1px solid #fff;
 }
