--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@ a {
   transition: 0.3s;
 }
 
+a:hover {
+  opacity: 0.5;
+}
+
 body {
   line-height: 1.6;
 }
@@ -35,6 +39,9 @@ header {
   margin-right: 30px;
 }
 
+.hamburger {
+  display: none;
+}
 /* ----firstview---- */
 #firstview {
   background: url(../img/mv.png) no-repeat;
@@ -292,4 +299,60 @@ footer {
 .footer-nav-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+.footer-nav-item {
+  padding: 0 10px;
+}
+
+.footer-nav-item+ .footer-nav-item {
+  border-left: 1px solid #fff;
+}
+
+@media screen and (max-width : 768px){
+  /* ----header---- */
+  .hamburger {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-top, .menu-line-middle, .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+  }
+
+  .menu-line-top {
+    top: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+  }
+
+  .menu-line-bottom {
+    bottom: 0;
+  }
+
+  .header-nav {
+    display: none;
+  }
+
+  /* ----main---- */
+  .wrap {
+    width: 85%;
+  }
+
+  .inner {
+    width: 85%;
+  }
+
+
 }
