--- a/css/contact.css
+++ b/css/contact.css
@@ -61,7 +61,7 @@ header {
 
 /*----- main -----*/
 .contact-wrap {
-  padding: 80px;
+  padding: 80px 0;
   width: 960px;
   margin: 0 auto;
 }
@@ -134,4 +134,72 @@ footer {
 
 .footer-nav-item+ .footer-nav-item {
   border-left: 1px solid #fff;
+}
+
+@media screen and (max-width : 768px){
+  /* ----header---- */
+  .hamburger {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-top, .menu-line-middle, .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+  }
+
+  .menu-line-top {
+    top: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+  }
+
+  .menu-line-bottom {
+    bottom: 0;
+  }
+
+  .header-nav {
+    display: none;
+  }
+
+  /* ----main---- */
+  .contact-wrap {
+    width: 90%;
+  }
+
+  .wrap {
+    width: 100%;
+  }
+
+  .catchcopy {
+    text-align: center;
+  }
+
+  .footer-inner {
+    width: 85%;
+  }
+
+  .footer-copyright {
+    margin: 0 auto;
+  }
+
+  .footer-nav-item {
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  .footer-nav-item+ .footer-nav-item {
+    border-left: none;
+  }
 }
