--- a/css/news.css
+++ b/css/news.css
@@ -94,6 +94,7 @@ main {
 }
 
 #contact .wrap {
+  display: inline;
   width: 1080px;
   margin: 0 auto;
 }
@@ -146,4 +147,77 @@ footer {
 
 .footer-nav-item+ .footer-nav-item {
   border-left: 1px solid #fff;
+}
+
+@media screen and (max-width : 768px){
+  /* ----header---- */
+  .hamburger {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-top, .menu-line-middle, .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+  }
+
+  .menu-line-top {
+    top: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+  }
+
+  .menu-line-bottom {
+    bottom: 0;
+  }
+
+  .header-nav {
+    display: none;
+  }
+
+  /* ----main---- */
+  .wrap {
+    width: 100%;
+  }
+
+  .catchcopy {
+    text-align: center;
+  }
+
+  .news-inner-wrap {
+    width: 90%;
+  }
+
+  .news-item-link {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .footer-inner {
+    width: 85%;
+  }
+
+  .footer-copyright {
+    margin: 0 auto;
+  }
+
+  .footer-nav-item {
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  .footer-nav-item+ .footer-nav-item {
+    border-left: none;
+  }
 }
