--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,6 @@ header {
 /* ----service---- */
 .service {
   padding: 80px 0;
-  width: 1080px;
   margin: 0 auto;
 }
 
@@ -112,11 +111,9 @@ header {
 }
 
 .service-item {
-  width: 49%;
-  margin-top: 20px;
-  margin-right: 10px;
+  width: 48%;
+  margin: 20px 10px 0;
 }
-
 .service-item-img img {
   width: 100%;
   height: auto;
@@ -143,8 +140,7 @@ header {
 }
 
 .news-inner {
-  width: 980px;
-  margin: 0 auto;
+  margin: 0 60px;
 }
 
 .news-head {
@@ -187,7 +183,6 @@ header {
 /* -----blog----- */
 .blog {
   padding: 80px 0;
-  width: 1080px;
   margin: 0 auto;
 }
 
