--- a/css/index.css
+++ b/css/index.css
@@ -182,8 +182,7 @@ header {
 
 /* -----blog----- */
 .blog {
-  padding: 80px 0;
-  margin: 0 auto;
+  padding: 80px 100px;
 }
 
 .blog-title {
@@ -194,12 +193,12 @@ header {
 
 .blog-list {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
 .blog-item {
-  width: 32%;
+  width: 28%;
   margin-right: 20px;
 }
 
@@ -282,7 +281,7 @@ header {
 
 /* ----footer---- */
 footer {
-  padding: 20px 0;
+  padding: 20px 40px;
   color: #fff;
   background-color: #222;
 }
@@ -364,7 +363,7 @@ footer {
   }
 
   .news-inner {
-    width: 85%;
+    margin: 0 25px;
   }
 
   .news-item-link {
@@ -373,18 +372,18 @@ footer {
   }
 
   .blog {
-    width: 85%;
+    display: block;
+    padding: 80px 20px;
   }
 
   .blog-item {
     width: 100%;
-    margin-right: 0;
+    margin: 0 auto;
   }
 
   #firstview .wrap {
     width: 85%;
   }
-
   .footer-inner {
     width: 85%;
   }
