--- a/css/service.css
+++ b/css/service.css
@@ -62,7 +62,7 @@ header {
 
 /* ----service---- */
 .service-wrap {
-  padding: 80px 0 ;
+  padding: 80px 0;
 }
 
 .service-item {
@@ -70,7 +70,6 @@ header {
   border-top: 1px solid #222;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .service-item-img {
@@ -85,6 +84,10 @@ header {
 .service-item-title {
   font-size: 24px;
   font-weight: bold;
+}
+
+.service-item-detail {
+  padding: 0 60px;
 }
 
 
@@ -124,7 +127,7 @@ header {
 
 /* ----footer---- */
 footer {
-  padding: 20px 0;
+  padding: 20px 40px;
   color: #fff;
   background-color: #222;
 }
