--- a/css/service.css
+++ b/css/service.css
@@ -63,14 +63,15 @@ header {
 /* ----service---- */
 .service-wrap {
   padding: 80px 0;
+  position: relative;
 }
 
 .service-list {
-  padding: 0 70px;
+  vertical-align: middle;
 }
 
 .service-item {
-  padding: 20px 0;
+  padding: 20px 100px;
   border-top: 1px solid #222;
   display: flex;
   flex-wrap: wrap;
