--- a/css/blog.css
+++ b/css/blog.css
@@ -65,9 +65,7 @@ header {
 
 /* ----blog---- */
 #blog {
-  padding: 80px 0;
-  width: 1080px;
-  margin: 0 auto;
+  padding: 80px 100px;
 }
 
 .blog-list {
@@ -201,7 +199,7 @@ footer {
   }
 
   #blog {
-    width: 85%;
+    padding: 80px 50px;
   }
 
   .blog-item:first-child {
