--- a/css/contact.css
+++ b/css/contact.css
@@ -61,9 +61,7 @@ header {
 
 /*----- main -----*/
 .contact-wrap {
-  padding: 80px 0;
-  width: 960px;
-  margin: 0 auto;
+  padding: 80px 150px;
 }
 
 .contact-form-item:not(:first-child) {
@@ -173,7 +171,7 @@ footer {
 
   /* ----main---- */
   .contact-wrap {
-    width: 90%;
+    padding: 80px 50px;
   }
 
   .wrap {
