--- a/css/recruit.css
+++ b/css/recruit.css
@@ -61,9 +61,7 @@ header {
 
 /* -----main---- */
 .recruit-wrap {
-  padding: 80px 0;
-  width: 960px;
-  margin: 0 auto;
+  padding: 80px 150px;
 }
 
 .recruit-title {
@@ -211,7 +209,7 @@ footer {
   }
 
   .recruit-wrap {
-    width: 90%;
+    padding: 80px 50px;
   }
 
   .footer-inner {
