--- a/css/company.css
+++ b/css/company.css
@@ -130,7 +130,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
-  margin: 0 auto;
+  padding: 0 50px;
 }
 
 .footer-nav-list {
