--- a/css/recruit.css
+++ b/css/recruit.css
@@ -147,7 +147,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
-  margin: 0 auto;
+  padding: 0 50px;
 }
 
 .footer-nav-list {
